SERVER-21724 Let backup role read system.profile

(cherry picked from commit 21bcf6b127c1bb24e74845327e8d20df26e560bc)